--- a/news-explorer-frontend/src/components/ModalWithForm/ModalWithForm.css
+++ b/news-explorer-frontend/src/components/ModalWithForm/ModalWithForm.css
@@ -4,6 +4,8 @@
   right: 0;
   left: 0;
   bottom: 0;
+  max-width: 100vw;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
